user/manifests/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commence-user
  labels:
    app: e-commence-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commence-user
  template:
    metadata:
      name: e-commence-user
      labels:
        app: e-commence-user
    spec:
      restartPolicy: Always
      containers:
        - name: e-commence-user
          image: example
          imagePullPolicy: Always
          args:
            - /bin/user
            - -conf
            - /bin/configs
          ports:
            - containerPort: 30001
              protocol: TCP
              name: http-server
            - containerPort: 30002
              protocol: TCP
              name: grpc-server
